// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Spotify Widget matches the error state snapshot 1`] = `
<DocumentFragment>
  <section
    class="css-1k28k4o"
    id="spotify"
  >
    <div
      class="css-rmw57n"
    >
      <div
        class="css-59lkxq"
      >
        <h4>
          Something went wrong
        </h4>
        <p>
          Failed to load this widget.
        </p>
      </div>
      <div
        class="css-bgces8"
      />
    </div>
    <header
      class="css-x6ikgs"
    >
      <h2
        class="css-1s4ek1q"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-spotify css-1f4q58s"
          data-icon="spotify"
          data-prefix="fab"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 8a248 248 0 1 0 0 496 248 248 0 1 0 0-496zM356.7 372.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
            fill="currentColor"
          />
        </svg>
        Spotify
      </h2>
      <div
        class="css-1rgtmy6"
      >
        <a
          class="css-1u2ig8x"
          href=""
          title=" on "
        >
          Browse Playlists
          <span
            class="read-more-icon"
          >
            →
          </span>
        </a>
      </div>
    </header>
    <div
      class="css-1hw7zrq"
    />
    <div
      class="css-sak8bt"
    >
      <div
        class="css-ccroti"
      >
        <h3
          class="css-9nh3l5"
        >
          Top Tracks
        </h3>
      </div>
      <p
        class="css-1qwovgy"
      >
        My 12 most-played tracks over the last 4 weeks.
      </p>
      <div
        class="media-item_grid null css-5stlgz"
      />
    </div>
    <div>
      <div
        class="css-ccroti"
      >
        <h3
          class="css-9nh3l5"
        >
          Playlists
        </h3>
      </div>
      <p
        class="css-1qwovgy"
      >
        My 12 favorite playlists.
      </p>
      <div
        class="media-item_grid null css-5stlgz"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Spotify Widget matches the loaded state snapshot 1`] = `
<DocumentFragment>
  <section
    class="css-1pk2a5b"
    id="spotify"
  >
    <header
      class="css-x6ikgs"
    >
      <h2
        class="css-1s4ek1q"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-spotify css-1f4q58s"
          data-icon="spotify"
          data-prefix="fab"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 8a248 248 0 1 0 0 496 248 248 0 1 0 0-496zM356.7 372.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
            fill="currentColor"
          />
        </svg>
        Spotify
      </h2>
      <div
        class="css-1rgtmy6"
      >
        <a
          class="css-1u2ig8x"
          href="https://spotify.com/user/test"
          title="Test User on Spotify"
        >
          Browse Playlists
          <span
            class="read-more-icon"
          >
            →
          </span>
        </a>
      </div>
    </header>
    <div
      class="css-1hw7zrq"
    >
      <div
        class="css-1giak3r"
      >
        10 Playlists
      </div>
      <div
        class="css-zcaudb"
      >
        20 Top Tracks
      </div>
    </div>
    <div
      class="css-sak8bt"
    >
      <div
        class="css-ccroti"
      >
        <h3
          class="css-9nh3l5"
        >
          Top Tracks
        </h3>
      </div>
      <p
        class="css-1qwovgy"
      >
        My 12 most-played tracks over the last 4 weeks.
      </p>
      <div
        class="media-item_grid null css-5stlgz"
      >
        <a
          class="media-item_media css-13fusor"
          title="Test Track – [object Object]"
        >
          <div
            class="css-x4b07x"
          >
            <div
              class="media-item_caption css-e7oldi"
            >
              <span>
                Test Track
              </span>
            </div>
            <img
              alt="cover artwork"
              class="css-karewm"
              crossorigin="anonymous"
              loading="lazy"
            />
          </div>
        </a>
      </div>
    </div>
    <div>
      <div
        class="css-ccroti"
      >
        <h3
          class="css-9nh3l5"
        >
          Playlists
        </h3>
      </div>
      <p
        class="css-1qwovgy"
      >
        My 12 favorite playlists.
      </p>
      <div
        class="media-item_grid null css-5stlgz"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Spotify Widget matches the loading state snapshot 1`] = `
<DocumentFragment>
  <section
    class="css-1pk2a5b"
    id="spotify"
  >
    <header
      class="css-x6ikgs"
    >
      <h2
        class="css-1s4ek1q"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-spotify css-1f4q58s"
          data-icon="spotify"
          data-prefix="fab"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 8a248 248 0 1 0 0 496 248 248 0 1 0 0-496zM356.7 372.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
            fill="currentColor"
          />
        </svg>
        Spotify
      </h2>
      <div
        class="css-1rgtmy6"
      >
        <svg
          class="svg-loaders-svg css-ao632c"
          fill="#1E90FF"
          height="24"
          viewBox="0 0 135 140"
          width="24"
        >
          <rect
            height="120"
            rx="6"
            width="15"
            y="10"
          >
            <animate
              attributeName="height"
              begin="0.5s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="120;110;100;90;80;70;60;50;40;140;120"
            />
            <animate
              attributeName="y"
              begin="0.5s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="10;15;20;25;30;35;40;45;50;0;10"
            />
          </rect>
          <rect
            height="120"
            rx="6"
            width="15"
            x="30"
            y="10"
          >
            <animate
              attributeName="height"
              begin="0.25s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="120;110;100;90;80;70;60;50;40;140;120"
            />
            <animate
              attributeName="y"
              begin="0.25s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="10;15;20;25;30;35;40;45;50;0;10"
            />
          </rect>
          <rect
            height="140"
            rx="6"
            width="15"
            x="60"
          >
            <animate
              attributeName="height"
              begin="0s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="120;110;100;90;80;70;60;50;40;140;120"
            />
            <animate
              attributeName="y"
              begin="0s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="10;15;20;25;30;35;40;45;50;0;10"
            />
          </rect>
          <rect
            height="120"
            rx="6"
            width="15"
            x="90"
            y="10"
          >
            <animate
              attributeName="height"
              begin="0.25s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="120;110;100;90;80;70;60;50;40;140;120"
            />
            <animate
              attributeName="y"
              begin="0.25s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="10;15;20;25;30;35;40;45;50;0;10"
            />
          </rect>
          <rect
            height="120"
            rx="6"
            width="15"
            x="120"
            y="10"
          >
            <animate
              attributeName="height"
              begin="0.5s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="120;110;100;90;80;70;60;50;40;140;120"
            />
            <animate
              attributeName="y"
              begin="0.5s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="10;15;20;25;30;35;40;45;50;0;10"
            />
          </rect>
        </svg>
      </div>
    </header>
    <div
      class="css-1hw7zrq"
    >
      <div
        class="css-1giak3r"
      >
         
      </div>
      <div
        class="css-zcaudb"
      >
         
      </div>
    </div>
    <div
      class="css-sak8bt"
    >
      <div
        class="css-ccroti"
      >
        <h3
          class="css-9nh3l5"
        >
          Top Tracks
        </h3>
      </div>
      <p
        class="css-1qwovgy"
      >
        My 12 most-played tracks over the last 4 weeks.
      </p>
      <div
        class="media-item_grid null css-5stlgz"
      >
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        class="css-ccroti"
      >
        <h3
          class="css-9nh3l5"
        >
          Playlists
        </h3>
      </div>
      <p
        class="css-1qwovgy"
      >
        My 12 favorite playlists.
      </p>
      <div
        class="media-item_grid null css-5stlgz"
      >
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
        <div
          class="show-loading-animation"
        >
          <div
            class="rect-shape css-2us3i8"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 100%; margin-right: 10px;"
          />
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
